Fix box 3 right align

--- a/foundations/block-and-inline/01-margin-and-padding-1/style.css
+++ b/foundations/block-and-inline/01-margin-and-padding-1/style.css
@@ -24,5 +24,5 @@ body {
   width: 200px;
   /* CHANGE ME */
   padding: 1.5em;
-  margin-left: 300px;
+  margin-left: 345px;
 }
